fix: z-index of zoom button

--- a/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/terminal/terminal.scss
+++ b/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/terminal/terminal.scss
@@ -74,7 +74,7 @@
             0 0 4px 0 rgba(0, 10, 20, 0.5);
             background-color: #2c3354;
             opacity: 0.8;
-            z-index: 21;
+            z-index: 11;
 
             &:hover {
                 opacity: 1;
